Fix mobile navigation button doesn't fit on the same line (#71)
Before scrolling, small screen resolutions would not fit the title and menu.

--- a/css/core.scss
+++ b/css/core.scss
@@ -274,6 +274,7 @@ img::-moz-selection {
     font-size: 1.5em;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
+    margin-right: 0;
   }
 
   #mainNav .navbar-toggler {
